inicio do design

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="estilo.css">
+    </head>
     <body>
         <h2>Projeto do Marcos Paulo</h2>
     </body>
